<resources>
    <string name="app_name">CartonOrdersApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">Welcome To CartonWale</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="no_order_available">No Order placed yet.</string>
    <string name="create_new_order">Create New Order</string>
    <string name="last_order_placed">Last Order placed</string>
    <string name="repeat_order">Repeat Order</string>
    <string name="txt_change_password">Change Password</string>
    <string name="err_msg_password">Please fill password</string>
    <string name="err_msg_confirm">Please confirm your password</string>
    <string name="err_msg_confirm_no_match">Your passwords do not match</string>
    <string name="err_msg_password_length">Password must be of 8 to 20 characters.</string>
</resources>

