<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/noOrderLL"
        android:visibility="gone"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/no_order_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:lines="3"
        android:text="@string/no_order_available"
        android:textColor="@color/black"
        android:textSize="14sp"

        />
        <Button
            android:id="@+id/createOrderBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/create_new_order"
            android:textColor="#009688"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/lastOrderLL"
        android:visibility="visible"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/last_order_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:lines="3"
            android:text="@string/last_order_placed"
            android:textColor="@color/black"
            android:textSize="14sp"

            />
        <Button
            android:id="@+id/repeatOrderBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/repeat_order"
            android:textColor="#009688"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>